[gd_scene load_steps=12 format=3 uid="uid://c4wa5h00dtun5"]

[ext_resource type="Script" uid="uid://c3s2tgmrk26py" path="res://scripts/player.gd" id="1_bms3g"]
[ext_resource type="PackedScene" uid="uid://clqd5uwc34gev" path="res://nodes/alien.tscn" id="1_u63mc"]
[ext_resource type="Texture2D" uid="uid://t6k87u5u877c" path="res://textures/tilemap-characters.png" id="2_bms3g"]

[sub_resource type="Animation" id="Animation_7lbay"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_me0cc"]
resource_name = "take_damage"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.168627, 0.235294, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2wrp4"]
_data = {
&"RESET": SubResource("Animation_7lbay"),
&"take_damage": SubResource("Animation_me0cc")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_me0cc"]
atlas = ExtResource("2_bms3g")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqdnm"]
atlas = ExtResource("2_bms3g")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lbay"]
atlas = ExtResource("2_bms3g")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wrp4"]
atlas = ExtResource("2_bms3g")
region = Rect2(0, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_46y3y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_me0cc")
}],
"loop": true,
"name": &"jumping",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqdnm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lbay")
}],
"loop": true,
"name": &"running",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wrp4")
}],
"loop": true,
"name": &"staying",
"speed": 5.0
}]

[node name="Player" instance=ExtResource("1_u63mc")]
script = ExtResource("1_bms3g")

[node name="Animation" type="AnimationPlayer" parent="." index="0"]
libraries = {
&"": SubResource("AnimationLibrary_2wrp4")
}

[node name="RightSword" parent="." index="3"]
collision_layer = 2
collision_mask = 2

[node name="LeftSword" parent="." index="4"]
collision_layer = 2
collision_mask = 2

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="." index="5"]
sprite_frames = SubResource("SpriteFrames_46y3y")
animation = &"running"

[node name="CameraTarget" type="Node2D" parent="." index="6"]

[node name="Camera2D" type="Camera2D" parent="CameraTarget" index="0"]
zoom = Vector2(0.7, 0.7)
position_smoothing_enabled = true
position_smoothing_speed = 3.0

[connection signal="body_entered" from="RightSword" to="." method="_on_sword_body_entered"]
[connection signal="body_entered" from="LeftSword" to="." method="_on_sword_body_entered"]
